added breakpoints for smaller screens

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -223,10 +223,26 @@ table.heroT {
     }
 }
 
+@media only screen and (max-width: 768px) {
+ 
+    h1.herotxt {
+        font-size: 4em;
+    }
+    
+    h2.herotxt {
+        font-size: 2em;
+    }
+    
+    .body {
+        font-size: 1.4em;
+    }
+ 
+}
+
 #gototop {
     background-color: $prime;
     font-weight: 900;
-    width: 7em;
+//    width: 7em;
     padding: .625em .5em;
     font-size: 1.2em;
     position: fixed;
