--- a/assets/main.scss
+++ b/assets/main.scss
@@ -193,7 +193,8 @@ table.heroT {
     margin: 0;
     
     .wrap {
-        width: 50%;
+        width: 90%;
+        max-width: 28em;
 //        text-align: left;
         display: inline-block;
         padding-bottom: 2.5em;
@@ -235,6 +236,10 @@ table.heroT {
     
     .body {
         font-size: 1.4em;
+    }
+    
+    #gototop {
+        display: none;
     }
  
 }
