set up explainer pages, added buttons to homepage

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,2 +1,7 @@
+<!--
 {% include titlebar.html %}
-{% include menubar.html %}
+{% include menubar.html %}-->
+
+<div class="titlebar">
+    <a href="{{ site.baseurl }}/">Occupy For Climate</a>
+</div>
