--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,12 +7,11 @@
 <body>
     {% include header.html %}
     <div id="gototop"><a href="#">Back to top &#8593;</a></div>
-    <div class="body">
+    <div class="body page">
         <div class="wrap">
-            <h1><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h1>
-            <p class="date">{{ page.date }}</p>
+            <h1>{{ page.title }}</h1>
+<!--            <p class="date">{{ page.date }}</p>-->
             {{ content }}
-            <a href="{{ page.comments }}">discuss on reddit</a>
         </div>
     </div>
 </body>
