post-meeting overhaul-ish update
- updated color palette
- changed buttons
- added donate page
- added big GET INVOLVED button
- updated social media links

Todo:
- add pages for GET INVOLVED, Why, What, Who

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     {% include header.html %}
-    <div id="gototop"><a href="#">Back to top &#8593;</a></div>
+<!--    <div id="gototop"><a href="#">Back to top &#8593;</a></div>-->
     <div class="body page">
         <div class="wrap">
             <h1>{{ page.title }}</h1>
