--- a/assets/fonts.scss
+++ b/assets/fonts.scss
@@ -7,3 +7,21 @@
 //    src: "/assets/FuturaStd-CondensedExtraBd.otf";
     font-weight:900;
 }
+
+@font-face {
+    font-family: Permian;
+    src: url("PermianSerifTypeface.otf");
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: Permian;
+    src: url("PermianSerifTypeface-Bold.otf");
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: Permian;
+    src: url("PermianSerifTypeface-Italic.otf");
+    font-style: italic;
+}
