--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         </div>
     </div>
 <!--    {% include menubar.html %}-->
-    <div id="gototop"><a href="#">Back to top &#8593;</a></div>
+<!--    <div id="gototop"><a href="#">Back to top &#8593;</a></div>-->
     <div class="body">
         <div class="wrap">
             {% include home.html %}
