--- a/assets/main.scss
+++ b/assets/main.scss
@@ -54,6 +54,7 @@ a {
     background-image: url(hero.jpg);
     background-position: -50%;
     background-size: cover;
+    background-attachment: fixed;
     width: 100%;
     height: 40em;
     text-align: center;
