majority of site is now earthstrike theme
following the Earth Strik styleguide

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,13 @@
-<!--
-{% include titlebar.html %}
-{% include menubar.html %}-->
-
 <div class="titlebar">
-    <a href="{{ site.baseurl }}/">Occupy For Climate</a>
+    <div class="titlewrap">
+        <span class="title-l">
+            <a href="{{ site.baseurl }}/">Youth for Climate</a>
+        </span>
+        <span class="title-r">
+            <a class="homebtn" href="{{ site.baseurl }}/">Home</a>
+            <a class="menubtn" href="why">Why</a>
+            <a class="menubtn" href="what">What</a>
+            <a class="menubtn" href="who">Who</a>
+        </span>
+    </div>
 </div>
