--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     {% include headinfo.html %}
+    {% include fa.html %}
     {% seo %}
 </head>
 <body>
     <div class="hero">
         <div class="wrap">
-            <h1 class="herotxt">Occupy for Climate.</h1>
-            <h2 class="herotxt">24 May. 15:00.</h2>
+            <h1 class="herotxt">YOUTH FOR CLIMATE</h1>
+            <h2 class="herotxt">20-27 SEPTEMBER</h2>
             
         </div>
     </div>
