--- a/_includes/headinfo.html
+++ b/_includes/headinfo.html
@@ -4,8 +4,10 @@
 <title>{{ page.title | append:" - Occupy For Climate" }}</title>
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/fonts.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css" integrity="sha384-n9+6/aSqa9lBidZMRCQHTHKJscPq6NW4pCQBiMmHdUCvPN8ZOg2zJJTkC7WIezWv" crossorigin="anonymous">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css" integrity="sha384-vd1e11sR28tEK9YANUtpIOdjGW14pS87bUBuOIoBILVWLFnS+MCX9T6MMf0VdPGq" crossorigin="anonymous">
+<!--
+<link href="https://fonts.googleapis.com/css?family=Passion+One:400,700&display=swap&subset=latin-ext" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700&display=swap" rel="stylesheet"> 
+-->
 <!--<link href='https://fonts.googleapis.com/css?family=Product+Sans:400,400i,700,700i' rel='stylesheet' type='text/css'>-->
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
