--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,6 +1,6 @@
 {% for post in site.posts %}
     <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
-    <p class="date">{{ post.date }}</p>
+    <p class="date">{{ post.date | date: '%B %d, %Y' }}</p>
     {{ post.excerpt }}
     <a href="{{ site.baseurl }}{{ post.url }}">Continue reading...</a>
 {% endfor %}
