--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <div class="hero">
         <div class="wrap">
             <h1 class="herotxt">YOUTH FOR CLIMATE</h1>
-            <h2 class="herotxt">20-27 SEPTEMBER</h2>
+            <h2 class="herotxt">UNITED FOR CLIMATE JUSTICE</h2>
             <div class="amod crisis">
                 <a href="thecrisis" class="crisis"><p>THE CRISIS</p></a>
             </div>
