big update part 2
- replaced action button with link to radioshow
- replaced gallery button with a link to resources
- resources page still has placeholders for stickers, needs updating
- fixed capitalization in page titles

--- a/_includes/headinfo.html
+++ b/_includes/headinfo.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>{{ page.title | append:" - Youth For Climate" }}</title>
+<title>{{ page.title | append:" - Youth for Climate" }}</title>
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/fonts.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
 <link href="https://fonts.googleapis.com/css?family=Passion+One:400,700&display=swap&subset=latin-ext" rel="stylesheet"> 
