added countdown clock
temp replaced THE CRISIS with a countdown to the next action (auto-festival)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,11 @@
     <div class="hero">
         <div class="wrap">
             <h1 class="herotxt">YOUTH FOR CLIMATE</h1>
-            <h2 class="herotxt">UNITED FOR CLIMATE JUSTICE</h2>
+            <h2 class="herotxt">TIME UNTIL <a href="action">THE NEXT ACTION:</a></h2>
+<!--            <h2 class="herotxt" id="countdown">01:23:45:60</h2>-->
             <div class="amod crisis">
-                <a href="thecrisis" class="crisis"><p>THE CRISIS</p></a>
+                <a href="action" class="crisis"><p id="countdown">COUNTDOWN</p></a>
+<!--                <a href="thecrisis" class="crisis"><p>THE CRISIS</p></a>-->
             </div>
         </div>
     </div>
@@ -22,4 +24,5 @@
         </div>
     </div>
 </body>
+<script src="{{ site.baseurl }}/assets/countdown.js"></script>
 </html>
