wondering if this will fix font problem (probably not)
font on some devices seems to be offet to be higher up than intended. trying to fix i have no idea why this is happening

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,7 +26,7 @@ $tertiary2: #3b8b32;
 body {
     min-height: 100vh;
 //    font-family: 'Passion One', sans-serif;
-    font-family: Graphik, sans-serif;
+    font-family: Graphikk, sans-serif;
     font-weight: 500;
     background-color: #fff;
 //    color: #383838;
