minor updates & fixes
 - change title of home page to just "Youth for Climate Luxembourg"
 - fix broken link to normal demands
 - change fb link back to main page instead of event

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <title>Youth for Climate Luxembourg</title>
     {% include headinfo.html %}
     {% include fa.html %}
     {% seo %}
