--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <div class="titlebar">
-    <a href="{{ site.baseurl }}/">Youth for Climate</a>
+<!--    <a href="{{ site.baseurl }}/">Youth for Climate</a>-->
+    <a href="./">Youth for Climate</a>
 <!--    <div class="titlewrap">-->
 <!--
         <span class="title-l">
