--- a/_includes/headinfo.html
+++ b/_includes/headinfo.html
@@ -19,3 +19,4 @@
 <meta name="application-name" content="YOUTH FOR CLIMATE">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
+<script src="{{ site.baseurl }}/assets/lang.js"></script>
