add language switching buttons to individual pages too
now using some js to determine what to do when buttons are pressed. the alternative would be to add a new property to every single page.md, so i think this is cleaner in the long term

--- a/_includes/lang.html
+++ b/_includes/lang.html
@@ -1,4 +1,4 @@
 <div class="lang">
-    <a href="{{site.baseurl}}/" id="en">EN</a>
+    <a href="{{baseurl}}/" id="en">EN</a>
     <a href="{{baseurl}}/fr" id="fr">FR</a>
 </div>
