--- a/_layouts/news.html
+++ b/_layouts/news.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     {% include header.html %}
+    {% include lang-page.html %}
     <div class="body page">
         <div class="wrap">
             {% include news.html %}
