--- a/_layouts/thecrisis.html
+++ b/_layouts/thecrisis.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     {% include header.html %}
+    {% include lang-page.html %}
 <!--    <div id="gototop"><a href="#">Back to top &#8593;</a></div>-->
     <div class="body page">
         <div class="wrap">
