--- a/_layouts/default-fr.html
+++ b/_layouts/default-fr.html
@@ -11,16 +11,18 @@
         <div class="wrap">
             <h1 class="herotxt" id="home">YOUTH FOR CLIMATE</h1>
 <!--            COUNTDOWN:  -->
-<!--            <h2 class="herotxt">TIME UNTIL <a href="thecrisis">THE NEXT ACTION:</a></h2>-->
+            <h2 class="herotxt">TIME UNTIL <a href="thecrisis">THE NEXT ACTION:</a></h2>
 <!--            <h2 class="herotxt" id="countdown">01:23:45:60</h2>-->
-<!--            <div class="amod crisis">-->
-<!--                <a href="thecrisis" class="crisis"><p id="countdown">COUNTDOWN</p></a>-->
-<!--            </div>-->
+            <div class="amod crisis">
+                <a href="thecrisis" class="crisis"><p id="countdown">COUNTDOWN</p></a>
+            </div>
             
 <!--        NORMAL BUTTON:  -->
+<!--
             <div class="amod crisis">
                 <a href="thecrisis" class="crisis"><p>LA CRISE</p></a>
             </div>
+-->
             
         </div>
     </div>
@@ -31,5 +33,6 @@
         </div>
     </div>
 </body>
-<!--<script src="{{ site.baseurl }}/assets/countdown.js"></script>-->
+<script src="{{ site.baseurl }}/assets/countdown.js"></script>
+<script src="{{ site.baseurl }}/assets/lang.js"></script>
 </html>
