--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,18 +11,18 @@
         <div class="wrap">
             <h1 class="herotxt" id="home">YOUTH FOR CLIMATE</h1>
 <!--            COUNTDOWN:  -->
-            <h2 class="herotxt">TIME UNTIL <a href="https://www.facebook.com/events/205025381497540">OUR NEXT ACTION:</a></h2>
+<!--            <h2 class="herotxt">TIME UNTIL <a href="https://www.facebook.com/events/205025381497540">OUR NEXT ACTION:</a></h2> -->
 <!--            <h2 class="herotxt" id="countdown">01:23:45:60</h2>-->
-            <div class="amod crisis">
+<!--            <div class="amod crisis">
                 <a href="https://www.facebook.com/events/205025381497540" class="crisis"><p id="countdown">COUNTDOWN</p></a>
-            </div>
+            </div> -->
             
 <!--        NORMAL BUTTON:  -->
-<!--
+
             <div class="amod crisis">
                 <a href="thecrisis" class="crisis"><p>THE CRISIS</p></a>
             </div>
--->
+
             
         </div>
     </div>
