--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
             <h2 class="herotxt">TIME UNTIL OUR NEXT ACTION:</h2> 
 <!--            <h2 class="herotxt">TIME UNTIL <a href="https://www.facebook.com/events/205025381497540">OUR NEXT ACTION:</a></h2> -->
             <div class="amod crisis">
-                <a href="https://www.facebook.com/events/205025381497540" class="crisis"><p id="countdown">COUNTDOWN</p></a>
+                <a href="thecrisis" class="crisis"><p id="countdown">COUNTDOWN</p></a>
             </div> 
             
 <!--        NORMAL BUTTON:  -->
