add google analytics

--- a/_includes/headinfo.html
+++ b/_includes/headinfo.html
@@ -20,3 +20,4 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <script src="{{ site.baseurl }}/assets/lang.js"></script>
+{% include google-analytics.html %}
