--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
         <div class="wrap">
             <h1 class="herotxt" id="home">YOUTH FOR CLIMATE</h1>
 <!--            COUNTDOWN:  -->
-            <h2 class="herotxt">TIME UNTIL OUR NEXT ACTION:</h2>
-<!--        <h2 class="herotxt">TIME UNTIL <a href="https://www.facebook.com/youthforclimateluxembourg">OUR NEXT ACTION:</a></h2> -->
+<!--        <h2 class="herotxt">TIME UNTIL OUR NEXT ACTION:</h2> -->
+            <h2 class="herotxt">TIME UNTIL <a href="https://www.facebook.com/youthforclimateluxembourg">OUR NEXT ACTION:</a></h2>
             <div class="amod crisis">
                 <a href="thecrisis" class="crisis"><p id="countdown">COUNTDOWN</p></a>
-<!--		<a href="#current-action" class="crisis"><p id="countdown">COUNTDOWN</p></a> -->
+<!--	        <a href="#current-action" class="crisis"><p id="countdown">COUNTDOWN</p></a> -->
             </div>
             
 <!--        NORMAL BUTTON:  -->
