--- a/_layouts/default-fr.html
+++ b/_layouts/default-fr.html
@@ -12,18 +12,18 @@
             <h1 class="herotxt" id="home">YOUTH FOR CLIMATE</h1>
 <!--            COUNTDOWN:  -->
 <!--        <h2 class="herotxt">TIME UNTIL OUR NEXT ACTION:</h2> -->
-            <h2 class="herotxt">TIME UNTIL <a href="https://www.facebook.com/youthforclimateluxembourg">OUR NEXT ACTION:</a></h2>
+<!--        <h2 class="herotxt">TIME UNTIL <a href="https://www.facebook.com/youthforclimateluxembourg">OUR NEXT ACTION:</a></h2>
             <div class="amod crisis">
                 <a href="thecrisis" class="crisis"><p id="countdown">COUNTDOWN</p></a>
 <!--	        <a href="#current-action" class="crisis"><p id="countdown">COUNTDOWN</p></a> -->
-            </div>
+            </div> -->
             
 <!--        NORMAL BUTTON:  -->
 
 
-<!--            <div class="amod crisis">
+            <div class="amod crisis">
                 <a href="thecrisis" class="crisis"><p>LA CRISE</p></a>
-            </div>  -->
+            </div>
 
 
             
