--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
             <div class="amod crisis">
                 <a href="thecrisis" class="crisis"><p id="countdown">COUNTDOWN</p></a>
 <!--	        <a href="#current-action" class="crisis"><p id="countdown">COUNTDOWN</p></a> -->
-            </div> -->
+<!--        </div> -->
             
 <!--        NORMAL BUTTON:  -->
 
